...
    </string>

    <string name="select_transfer_method_country">Country</string>
    <string name="select_transfer_method_currency">Currency</string>
    <string name="activity_select_transfer_method_title">Add Account</string>
    <string name="title_activity_add_transfer_method">Add Transfer Method</string>
    <string name="title_add_bank_account">Bank Account</string>
    <string name="title_add_bank_card">Debit Card</string>

    <string name="error_exact_length_field">The length of this field is exactly %d.</string>
    <string name="error_invalid_expiry_date">%s is invalid.</string>
    <string name="error_min_max_length_field">The minimum length of this field is {0} and maximum
        length is {1}.
    </string>

    <string name="button_create_transfer_method">Create Transfer Method</string>
    <string name="default_account_label">Default Account</string>
    <string name="default_account_sub_label">Select account as default method</string>
    <string name="api_expiry_date_format">MM/YY</string>
    <string name="add_transfer_method_fee_label">Transaction Fee:</string>
    <string name="add_transfer_method_processing_time_label">Processing Time:</string>

    <string name="select_transfer_method_item_fee_information">Transaction Fee: %s</string>
    <string name="select_transfer_method_item_processing_time_information">Processing Time: %s
    </string>

...
